[gd_scene load_steps=12 format=2]

[ext_resource path="res://textures/Guard/guard_typeA_head_S.png" type="Texture" id=1]
[ext_resource path="res://textures/Guard/guard_typeA_body_move_S_4.png" type="Texture" id=2]
[ext_resource path="res://textures/Guard/guard_typeA_weapon.png" type="Texture" id=3]
[ext_resource path="res://Obstacles/Guard/Guard_Ragdoll.gd" type="Script" id=4]
[ext_resource path="res://audio/death1.wav" type="AudioStream" id=5]
[ext_resource path="res://audio/death2.wav" type="AudioStream" id=6]
[ext_resource path="res://audio/death3.wav" type="AudioStream" id=7]
[ext_resource path="res://audio/death4.wav" type="AudioStream" id=8]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CapsuleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4.09686, 14.5856 )

[node name="Node2D" type="Node2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 4 )

[node name="Head" type="RigidBody2D" parent="."]
gravity_scale = 0.0

[node name="Sprite" type="Sprite" parent="Head"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
shape = SubResource( 1 )

[node name="Body" type="RigidBody2D" parent="."]
gravity_scale = 0.0

[node name="Sprite" type="Sprite" parent="Body"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
shape = SubResource( 2 )

[node name="RigidBody2D" type="RigidBody2D" parent="."]
gravity_scale = 0.0

[node name="Sprite" type="Sprite" parent="RigidBody2D"]
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
shape = SubResource( 3 )

[node name="Cleanup" type="Timer" parent="."]

[node name="death1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="death2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="death3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="death4" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
[connection signal="timeout" from="Cleanup" to="." method="_on_Cleanup_timeout"]
